--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,10 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Work Sans', sans-serif;
 }
 
-/* header style */
+/* header style start*/
 .header {
     width: 100%;
     height: 100vh;
@@ -26,7 +27,6 @@
 
 .header-title {
     margin-bottom: 25px;
-    font-family: 'Work Sans', sans-serif;
     font-size: 64px;
     font-weight: bold;
 }
@@ -34,7 +34,6 @@
 .header-desc {
     font-weight: 400;
     font-size: 16px;
-    font-family: 'Work Sans', sans-serif;
     color: #444343;
     padding-left: 30px;
     margin-bottom: 25px;
@@ -50,3 +49,80 @@
     border: 0;
     border-radius: 5px;
 }
+
+/* header style end */
+
+/* blog section style start */
+.blog-section {
+    margin-top: 125px;
+    margin-left: 205px;
+    margin-right: 322px;
+}
+
+.blog-section-container {
+    display: flex;
+    gap: 73px;
+}
+
+.blog-img {
+    /* background-color: #FCDED3;
+    border-radius: 30px; */
+
+}
+
+.blog-section-desc {
+    padding: 150px;
+}
+
+.blog-title {
+    font-weight: 700;
+    font-size: 40px;
+}
+
+.blog-desc {
+    font-size: 16px;
+    color: #444343;
+    padding: 30px 20px 20px 0px;
+    line-height: 150%;
+}
+
+.blog-section-desc p {
+    font-size: 16px;
+    color: #444343;
+}
+
+.blog-icon {
+    width: 30px;
+    height: 30px;
+    color: #16D887;
+}
+
+/* blog section style end */
+
+/* plan section start */
+.plan-title {
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 140px;
+    margin-bottom: 0px;
+}
+
+.section-plan-container {
+    display: flex;
+    gap: 150px;
+    text-align: center;
+    margin-left: 230px;
+    padding: 90px;
+}
+
+.plan-item h1 {
+    margin: 30px 0;
+}
+
+.plan-item p {
+    font-weight: 500;
+    font-size: 25px;
+}
+
+/* plan section end */
