--- a/style/style.css
+++ b/style/style.css
@@ -128,6 +128,7 @@
 
 /* plan section style end */
 
+/* goal section style start */
 .my-goal-section{
     width: 1400px;
     height: 750px;
@@ -135,9 +136,8 @@
     border-radius: 5px;
     margin-bottom: 150px;
     border: 2px solid #7a0a22;
-    /* padding: 100px; */
-     margin-left: 230px;
-    /* margin-right: 30px; */
+    margin-left: 230px;
+    
 }
 .goal-container{
     display: flex;
@@ -177,14 +177,14 @@
     margin-top: 20px;
     font-size: 25px;
 }
+/* goal section style start */
+
 /* linear gradient style start */
 .linear-container {
     background-image: url('../images/watch.png');
     background-repeat: no-repeat;
     height: 300px;
     margin-left: 300px;
-
-
 }
 
 .linear-item {
@@ -277,6 +277,5 @@ input {
     border: 0;
     border-radius: 5px;
 }
-
 
 /* footer style end */
